# APCS2021

./: README.md  form.html  mario.py  pettan.html  styles.css
APCS Create/: Shogi.py
APCS Website/: basic.php  debate.html  form.html  index.html  pettan.html  styles.css
APCS2021/: Create Pseudocode.docx
APCS2021/APCS Website/: basic.php  debate.html  index.html
APCS2021/JS Games/Memory/: memory.js
Base Codes/pixel-shogi-master/: CMakeLists.txt  README.md
Base Codes/pixel-shogi-master/assets/sprites/pyxel_src/: board.pyxel  fu.pyxel  gin.pyxel  gyoku.pyxel  hisha.pyxel  kaku.pyxel  kei.pyxel  kin.pyxel  kyou.pyxel  moveMarker.pyxel  narigin.pyxel  narikei.pyxel  narikyou.pyxel  ou.pyxel  ryuu.pyxel  selectionMarker.pyxel  to.pyxel  uma.pyxel
Base Codes/pixel-shogi-master/src/: Board.cpp  Board.h  Game.cpp  Game.h  Piece.cpp  Piece.h  TextureManager.cpp  TextureManager.h  Tile.cpp  Tile.h  main.cpp
JS Games/Connect 4/: C4.js  index.html
JS Games/Memory/: index.html  memory.js
JS Games/Snake/: Snake.js  index.html
JS Games/Space Invaders/: index.html
JS Games/Tetris/: index.html
JS Games/Whack-a-mole/: index.html
Python Redos/: mario.py
